[package]
name = "lib-q-fn-dsa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "FN-DSA (FIPS 206) post-quantum digital signature implementation"
keywords = ["cryptography", "post-quantum", "fn-dsa", "falcon", "signature"]
categories = ["cryptography"]

[lib]
bench = false
name = "lib_q_fn_dsa"
path = "src/lib.rs"
# wasm-pack requires `cdylib` for wasm32; `rlib` remains for Rust consumers. Native no_std CI enables `no_std_panic_handler` where applicable.
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[dependencies]
# Core libQ types
lib-q-core = { path = "../lib-q-core", version = "0.0.6" }
lib-q-random = { path = "../lib-q-random", version = "0.0.6", features = ["fn-dsa", "rand", "getrandom"] }

# FN-DSA implementation (the actual algorithm)
lib-q-fn-dsa-alg = { path = "fn-dsa", version = "0.0.6" }

# Standard library features
rand_core = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"], optional = true }

# WASM support
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console"] }

[features]
default = ["std", "alloc"]
std = ["alloc"]
alloc = []
# Marker for CI/scripts that pass `--features std,rand`; RNG is provided via `lib-q-random` on the default dependency path.
rand = []

# Security features
zeroize = ["dep:zeroize"]

# Performance features
no_avx2 = ["lib-q-fn-dsa-alg/no_avx2"]
shake256x4 = ["lib-q-fn-dsa-alg/shake256x4"]

# WASM support
wasm = ["lib-q-random/wasm", "wasm-bindgen", "js-sys", "web-sys"]

# `criterion` / `proptest` pull host-only / `getrandom` 0.3 chains; wasm CI uses `getrandom_backend="wasm_js"`.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[[example]]
name = "fn_dsa_demo"
path = "examples/fn_dsa_demo.rs"

[[example]]
name = "wasm_example"
path = "examples/wasm_example.rs"

[[example]]
name = "no_std_example"
path = "examples/no_std_example.rs"
required-features = ["alloc"]

[[bench]]
name = "fn_dsa_bench"
harness = false
path = "benches/fn_dsa_bench.rs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(simd128)',
    'cfg(simd256)',
    'cfg(aarch64)',
    'cfg(x86_64)',
] }