[package]
name = "lib-q-hpke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "HPKE implementation for lib-q"
keywords = ["cryptography", "post-quantum", "hpke", "kem"]
categories = ["cryptography"]
# Temporarily disabled publishing to avoid CI issues
# publish = false

[lib]
name = "lib_q_hpke"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
required-features = ["alloc"]

[dependencies]
lib-q-core = { path = "../lib-q-core", default-features = false }
lib-q-kem = { path = "../lib-q-kem", default-features = false }
lib-q-hash = { path = "../lib-q-hash", default-features = false }
lib-q-random = { path = "../lib-q-random", features = ["hpke"] }
lib-q-aead = { path = "../lib-q-aead", default-features = false, features = ["alloc", "saturnin", "shake256"] }
lib-q-ml-kem = { path = "../lib-q-ml-kem", optional = true }
lib-q-ml-dsa = { path = "../lib-q-ml-dsa", optional = true }

# Post-quantum dependencies only
rand_core = { workspace = true, default-features = false }
zeroize = { workspace = true, features = ["zeroize_derive"] }
getrandom = { version = "0.3.3", default-features = false, optional = true }

# Post-quantum AEADs
lib-q-saturnin = { path = "../lib-q-saturnin", optional = true }

[features]
default = ["alloc", "ml-kem", "saturnin", "shake256", "hash", "secure-rng"]
std = ["alloc", "lib-q-core/std", "lib-q-aead/std", "rand_core/std", "getrandom/std"]
alloc = ["lib-q-core/alloc"]
secure-rng = ["getrandom", "getrandom/std"]

# Post-quantum algorithm support
ml-kem = ["dep:lib-q-ml-kem", "lib-q-kem/ml-kem"]
ml-dsa = ["dep:lib-q-ml-dsa"]
hash = ["lib-q-hash/alloc"]
saturnin = ["dep:lib-q-saturnin", "lib-q-saturnin/aead", "lib-q-saturnin/alloc"]
shake256 = ["lib-q-aead/shake256"]

# WebAssembly support
wasm = ["getrandom/wasm_js"]

# Testing
hpke-test = ["std"]

[[example]]
name = "basic_usage"
required-features = ["std"]

[[example]]
name = "advanced_usage"
required-features = ["std"]

[dev-dependencies]
lib-q-random = { path = "../lib-q-random", features = ["std"] }
lib-q = { path = "..", features = ["ml-kem"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(docsrs)'] }
