[package]
name = "lib-q-hpke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "HPKE implementation for lib-q"
keywords = ["cryptography", "post-quantum", "hpke", "kem"]
categories = ["cryptography"]
# Temporarily disabled publishing to avoid CI issues
# publish = false

[lib]
name = "lib_q_hpke"
path = "src/lib.rs"
crate-type = ["rlib"]
required-features = ["alloc"]

[dependencies]
lib-q-core = { path = "../lib-q-core", version = "0.0.2", default-features = false }
lib-q-kem = { path = "../lib-q-kem", version = "0.0.2", default-features = false }
lib-q-hash = { path = "../lib-q-hash", version = "0.0.2", default-features = false }
lib-q-random = { path = "../lib-q-random", version = "0.0.2", features = ["hpke"] }
lib-q-aead = { path = "../lib-q-aead", version = "0.0.2", default-features = false, features = ["alloc", "saturnin", "shake256"] }
lib-q-ml-kem = { path = "../lib-q-ml-kem", version = "0.0.2", optional = true }
lib-q-ml-dsa = { path = "../lib-q-ml-dsa", version = "0.0.2", optional = true }

# Post-quantum dependencies only
rand_core = { workspace = true, default-features = false }
zeroize = { workspace = true, features = ["zeroize_derive"] }
getrandom = { workspace = true, default-features = false, optional = true }

# Post-quantum AEADs
lib-q-saturnin = { path = "../lib-q-saturnin", version = "0.0.2", optional = true }

[features]
default = ["alloc", "ml-kem", "saturnin", "shake256", "hash", "secure-rng"]
std = ["alloc", "lib-q-core/std", "lib-q-aead/std"]
alloc = ["lib-q-core/alloc", "lib-q-kem/alloc"]
secure-rng = ["lib-q-random/getrandom"]

# Post-quantum algorithm support
ml-kem = ["dep:lib-q-ml-kem", "lib-q-kem/ml-kem"]
hqc = ["lib-q-kem/hqc"]
ml-dsa = ["dep:lib-q-ml-dsa"]
hash = ["lib-q-hash/alloc"]
saturnin = ["dep:lib-q-saturnin", "lib-q-saturnin/aead", "lib-q-saturnin/alloc"]
shake256 = ["lib-q-aead/shake256"]
duplex-sponge-aead = ["lib-q-aead/duplex-sponge-aead"]

# WebAssembly support
wasm = ["getrandom/wasm_js"]

# Testing
hpke-test = ["std"]

[[example]]
name = "basic_usage"
required-features = ["std"]

[[example]]
name = "advanced_usage"
required-features = ["std"]

[dev-dependencies]
lib-q-random = { path = "../lib-q-random", version = "0.0.2", features = ["std"] }
lib-q = { path = "../lib-q", version = "0.0.2", features = ["ml-kem"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(docsrs)'] }
