[package]
name = "lib-q-hpke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "HPKE implementation for lib-q"
keywords = ["cryptography", "post-quantum", "hpke", "kem"]
categories = ["cryptography"]
# Temporarily disabled publishing to avoid CI issues
# publish = false


[package.metadata.cargo-machete]
ignored = [
    "getrandom",
    "js-sys",
    "lib-q-ml-dsa",
    "lib-q-ml-kem",
]
[lib]
name = "lib_q_hpke"
path = "src/lib.rs"
# wasm-pack requires `cdylib` for wasm32; `rlib` remains for Rust consumers. Native no_std CI enables `no_std_panic_handler` where applicable.
crate-type = ["cdylib", "rlib"]
required-features = ["alloc"]

[dependencies]
lib-q-core = { path = "../lib-q-core", version = "0.0.7", default-features = false }
lib-q-kem = { path = "../lib-q-kem", version = "0.0.7", default-features = false }
lib-q-hash = { path = "../lib-q-hash", version = "0.0.7", default-features = false }
lib-q-random = { path = "../lib-q-random", version = "0.0.7", features = ["hpke"] }
lib-q-aead = { path = "../lib-q-aead", version = "0.0.7", default-features = false, features = ["alloc", "saturnin", "shake256"] }
lib-q-ml-kem = { path = "../lib-q-ml-kem", version = "0.0.7", optional = true }
lib-q-ml-dsa = { path = "../lib-q-ml-dsa", version = "0.0.7", optional = true }

# Post-quantum dependencies only
rand_core = { workspace = true, default-features = false }
zeroize = { workspace = true, default-features = false, features = ["alloc", "zeroize_derive"] }
subtle = { workspace = true, default-features = false }
getrandom = { workspace = true, default-features = false, optional = true }
lib-q-saturnin = { path = "../lib-q-saturnin", version = "0.0.7", optional = true }
wasm-bindgen = { workspace = true, optional = true, features = ["serde-serialize"] }
js-sys = { workspace = true, optional = true }
serde = { workspace = true, optional = true, default-features = false, features = ["derive"] }
serde-wasm-bindgen = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
hex = { workspace = true, optional = true }
spin = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, default-features = false, features = ["wasm_js"] }

[features]
default = ["alloc", "ml-kem", "saturnin", "shake256", "hash", "secure-rng"]
std = ["alloc", "lib-q-core/std", "lib-q-aead/std"]
alloc = ["lib-q-core/alloc", "lib-q-kem/alloc"]
secure-rng = ["lib-q-random/getrandom"]

# Post-quantum algorithm support
ml-kem = ["dep:lib-q-ml-kem", "lib-q-kem/ml-kem"]
hqc = ["lib-q-kem/hqc"]
ml-dsa = ["dep:lib-q-ml-dsa"]
hash = ["lib-q-hash/alloc"]
saturnin = ["dep:lib-q-saturnin", "lib-q-saturnin/aead", "lib-q-saturnin/alloc"]
shake256 = ["lib-q-aead/shake256"]
duplex-sponge-aead = ["lib-q-aead/duplex-sponge-aead"]

# WebAssembly support
wasm = [
    "getrandom/wasm_js",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "serde",
    "dep:serde-wasm-bindgen",
    "dep:serde_json",
    "dep:hex",
    "lib-q-core/wasm",
]

# Testing
hpke-test = ["std"]

[[example]]
name = "basic_usage"
required-features = ["std"]

[[example]]
name = "advanced_usage"
required-features = ["std"]

[[example]]
name = "hpke_interop_negotiation"
required-features = ["std"]

[dev-dependencies]
lib-q-random = { path = "../lib-q-random", version = "0.0.7", features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen-test = { workspace = true }

[[test]]
name = "auth_encap_validation_tests"
path = "tests/auth_encap_validation_tests.rs"
required-features = ["std", "ml-kem", "hash", "secure-rng"]

[[test]]
name = "security_fixes_tests"
path = "tests/security_fixes_tests.rs"
required-features = ["std", "ml-kem", "hash", "secure-rng"]

[[test]]
name = "wasm_smoke"
path = "tests/wasm_smoke.rs"
required-features = ["wasm", "alloc", "ml-kem", "saturnin", "shake256"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(docsrs)'] }
