[package]
name = "lib-q-hqc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Post-Quantum HQC (Hamming Quasi-Cyclic) KEM for lib-Q"
keywords = ["cryptography", "post-quantum", "hqc", "kem", "nist"]
categories = ["cryptography", "wasm"]

[dependencies]
# Core libQ dependencies
lib-q-core = { path = "../lib-q-core" }
lib-q-sha3 = { path = "../lib-q-sha3" }
lib-q-keccak = { path = "../lib-q-keccak" }
lib-q-random = { path = "../lib-q-random", optional = true }

# Core cryptographic primitives
hybrid-array = "0.4.5"           # Type-safe fixed-size arrays
rand_core = { workspace = true } # RNG traits
hex = { workspace = true }       # Hex encoding for test vectors

# Platform-specific dependencies
heapless = { version = "0.9.2", optional = true }              # no_std collections
wasm-bindgen = { workspace = true, optional = true }           # WASM bindings
defmt = { version = "1.0.1", optional = true }                 # no_std logging

# Optional features
serde = { workspace = true, features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }       # Large array serialization
zeroize = { workspace = true, optional = true }                # Secure memory clearing
aes = { version = "0.8.4", optional = true }                   # AES for DRBG

[dev-dependencies]
# Test dependencies
lib-q-random = { path = "../lib-q-random", features = ["std", "nist-drbg"] }
sha3 = { path = "../reference/sha3", features = ["alloc"] }    # Reference SHA3 for comparison
rand = { workspace = true }

# Benchmarking dependencies
criterion = { workspace = true, features = ["html_reports"] }
dudect-bencher = "0.6.0"                                       # Constant-time verification

[[example]]
name = "hqc_example"
path = "examples/hqc_example.rs"
required-features = ["hqc128", "hqc192", "hqc256"]

[[bench]]
name = "performance_benchmarks"
harness = false


[features]
default = ["alloc", "random", "bearssl-aes"]

# Core features
std = []                            # Standard library support (compatibility feature)
alloc = []                          # Heap allocation support (required for std builds)
no_std = ["dep:heapless"]           # Embedded/no_std with heapless collections

# HQC algorithm variants (NIST security levels)
hqc128 = ["alloc", "random", "lib-q-core/std", "lib-q-core/alloc"]  # 128-bit security (Level 1)
hqc192 = ["alloc", "random", "lib-q-core/std", "lib-q-core/alloc"]  # 192-bit security (Level 3)
hqc256 = ["alloc", "random", "lib-q-core/std", "lib-q-core/alloc"]  # 256-bit security (Level 5)
hqc = ["hqc128", "hqc192", "hqc256"]                                # All HQC variants

# Random number generation
random = ["dep:lib-q-random", "lib-q-random/std"]                   # RNG support (required for key generation)
nist-drbg = ["dep:lib-q-random", "lib-q-random/nist-drbg"]         # NIST SP 800-90A DRBG

# Platform support
wasm = ["wasm-bindgen", "hqc", "lib-q-core/wasm"]                  # WebAssembly bindings
serialization = ["serde", "serde-big-array"]                        # Serde serialization

# Security hardening
zeroize = ["dep:zeroize"]                                           # Automatic memory zeroization
security-hardened = ["zeroize", "hqc"]                              # Full security hardening

# DRBG implementations (for KAT compatibility)
aes-drbg = ["aes", "alloc"]                                         # Standard AES-256-CTR-DRBG
bearssl-aes = ["aes", "alloc"]                                      # BearSSL AES for exact KAT match

# Debug and diagnostics features (development only)
debug-drbg-interop = ["aes-drbg", "bearssl-aes"]                   # Compare DRBG implementations
debug-drbg-state = []                                               # Log DRBG state transitions
debug-drbg-state-defmt = ["debug-drbg-state", "defmt"]             # DRBG state logging with defmt
archive-tests = []                                                  # Enable archived diagnostic tests

# Performance optimizations
simd-avx2 = []                                                      # AVX2 SIMD with runtime detection

[lib]
name = "lib_q_hqc"
path = "src/lib.rs"
crate-type = ["rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(kani)',
    'cfg(feature, values("lib-q-random"))',
] }

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt to preserve cryptographic timing characteristics
# Enable manually if binary size is more critical than constant-time guarantees
wasm-opt = false
