[package]
name = "lib-q-hqc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Post-Quantum HQC (Hamming Quasi-Cyclic) KEM for lib-Q"
keywords = ["cryptography", "post-quantum", "hqc", "kem", "nist"]
categories = ["cryptography", "wasm"]
autobenches = false
# KAT `.rsp` trees under `kats/` exceed crates.io's 10 MiB upload limit; keep for CI, not the registry tarball.
exclude = ["/kats", "/tests", "/benches", "/scripts"]


[package.metadata.cargo-machete]
ignored = [
    "criterion",
    "heapless",
    "hybrid-array",
    "js-sys",
    "rand",
    "serde",
    "serde-big-array",
]
[dependencies]
# Core libQ dependencies
lib-q-core = { path = "../lib-q-core", version = "0.0.8", default-features = false }
lib-q-types = { path = "../lib-q-types", version = "0.0.8", default-features = false }
lib-q-sha3 = { path = "../lib-q-sha3", version = "0.0.8" }
lib-q-keccak = { path = "../lib-q-keccak", version = "0.0.8", default-features = false }
lib-q-random = { path = "../lib-q-random", version = "0.0.8", optional = true }

# Core cryptographic primitives
hybrid-array = { workspace = true }
rand_core = { workspace = true } # RNG traits
hex = { version = "0.4.3", default-features = false, features = ["alloc"] } # Hex (direct dep so default-features can be disabled for no_std)

# Platform-specific dependencies
heapless = { version = "0.9.3", optional = true }              # no_std collections
wasm-bindgen = { workspace = true, optional = true }           # WASM bindings
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
defmt = { version = "1.1.0", optional = true }                 # no_std logging

# Optional features
serde = { workspace = true, features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }       # Large array serialization
zeroize = { workspace = true, optional = true, default-features = false, features = ["alloc"] } # Secure memory clearing
subtle = { workspace = true, optional = true, default-features = false }
aes = { workspace = true, default-features = false, optional = true } # AES for DRBG

[dev-dependencies]
# Test dependencies
lib-q-random = { path = "../lib-q-random", version = "0.0.8", features = ["std"] }
rand = { workspace = true }
wasm-bindgen-test = { workspace = true }

# Benchmarking dependencies (host targets only)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
lib-q-sca-test = { path = "../lib-q-sca-test", version = "0.0.8" }

[[test]]
name = "nist_kem_kat"
path = "tests/nist_kem_kat.rs"
required-features = ["alloc", "hqc", "random"]

[[test]]
name = "hardened_dudect_smoke"
path = "tests/hardened_dudect_smoke.rs"
required-features = ["hardened"]

[[test]]
name = "official_specification_verification_test"
path = "tests/official_specification_verification_test.rs"
required-features = ["alloc", "nist-drbg"]

[[test]]
name = "comprehensive_failure_analysis_test"
path = "tests/comprehensive_failure_analysis_test.rs"
required-features = ["alloc", "nist-drbg"]

[[example]]
name = "hqc_example"
path = "examples/hqc_example.rs"
required-features = ["hqc128", "hqc192", "hqc256"]

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[[test]]
name = "wasm_smoke"
path = "tests/wasm_smoke.rs"
required-features = ["wasm", "hqc", "random", "serialization"]

[features]
# std-by-default; bare-metal/no_std consumers build with `--no-default-features --features no_std`.
default = ["std", "alloc", "random"]

# Core features
std = ["lib-q-core/std"]            # Standard library support
alloc = ["lib-q-core/alloc"]        # Heap allocation support (required for std builds)
heapless = ["dep:heapless"]         # Named feature for optional dep (workspace `cargo metadata --features heapless`).
# Embedded/no_std: heapless collections + alloc (HQC's PKE/contexts use `alloc` and `lib_q_core::KemContext`,
# which is alloc-gated). A bare-metal final artifact additionally needs an integrator getrandom custom backend.
no_std = ["heapless", "alloc"]

# HQC algorithm variants (NIST security levels)
hqc128 = ["alloc", "random", "zeroize", "lib-q-core/std", "lib-q-core/alloc"]  # 128-bit security (Level 1)
hqc192 = ["alloc", "random", "zeroize", "lib-q-core/std", "lib-q-core/alloc"]  # 192-bit security (Level 3)
hqc256 = ["alloc", "random", "zeroize", "lib-q-core/std", "lib-q-core/alloc"]  # 256-bit security (Level 5)
hqc = ["hqc128", "hqc192", "hqc256"]                                # All HQC variants

# Random number generation
random = ["dep:lib-q-random", "lib-q-random/std", "zeroize"]        # RNG + secure stack buffers in provider decapsulation
nist-drbg = ["dep:lib-q-random", "lib-q-random/nist-drbg"]         # NIST SP 800-90A DRBG

# Platform support
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:serde_json",
    "hqc",
    "lib-q-core/wasm",
    "serialization",
    "zeroize",
]
serialization = ["serde", "serde-big-array"]                        # Serde serialization

# Security hardening
zeroize = ["dep:zeroize"]                                           # Automatic memory zeroization
subtle = ["dep:subtle"]
# Atomic side-channel hardening gate (decapsulation CT compare/select). Do not split.
hardened = ["random", "zeroize", "subtle"]
security-hardened = ["zeroize", "hqc", "hardened"]                  # Full security hardening

# DRBG implementations (KAT / reference compatibility only — not used in production RNG paths)
kat-drbg = ["bearssl-aes"]                                          # Opt-in KAT-compatible DRBG (BearSSL-style)
aes-drbg = ["aes", "alloc"]                                         # Standard AES-256-CTR-DRBG
bearssl-aes = ["aes", "alloc"]                                      # BearSSL AES for exact KAT match

# Debug and diagnostics features (development only)
debug-drbg-interop = ["aes-drbg", "bearssl-aes"]                   # Compare DRBG implementations
debug-drbg-state = []                                               # Log DRBG state transitions
debug-drbg-state-defmt = ["debug-drbg-state", "defmt"]             # DRBG state logging with defmt
archive-tests = []                                                  # Enable archived diagnostic tests

# Performance optimizations
simd-avx2 = []                                                      # AVX2 SIMD with runtime detection

[lib]
bench = false
name = "lib_q_hqc"
path = "src/lib.rs"
# wasm-pack requires `cdylib` for wasm32; `rlib` remains for Rust consumers. Native no_std CI enables `no_std_panic_handler` where applicable.
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(kani)',
    'cfg(feature, values("lib-q-random"))',
    'cfg(feature, values("hardened", "subtle"))',
] }

[package.metadata.wasm-pack.profile.release]
# `-Oz` reduces size; see docs/wasm-security-model.md for WASM timing caveats vs native builds.
wasm-opt = ["-Oz", "--enable-bulk-memory"]
