[package]
name = "lib-q-intrinsics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "SIMD intrinsics for lib-Q cryptographic operations"
keywords = ["cryptography", "intrinsics", "simd", "avx2", "neon"]
categories = ["cryptography", "no-std"]

# `default-features = false`: this crate is `#![no_std]`; pulling lib-q-platform's default `std`
# would force lib-q-core into std (and `once_cell/std`), breaking bare-metal no_std consumers.
[dependencies]
lib-q-platform = { path = "../lib-q-platform", version = "0.0.8", default-features = false }

[features]
default = []
simd128 = []
simd256 = []
simd512 = []

[lib]
name = "lib_q_intrinsics"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(simd128)',
    'cfg(simd256)',
    'cfg(simd512)',
    'cfg(aarch64)',
    'cfg(x86_64)',
] }