[package]
name = "lib-q-k12"
version.workspace = true
description = "Pure Rust implementation of the KangarooTwelve hash function for lib-Q"
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/lib-q-k12"
repository.workspace = true
keywords = ["crypto", "hash", "digest", "lib-q"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { workspace = true }
lib-q-sha3 = { path = "../lib-q-sha3", version = "0.0.5", default-features = false }

[dev-dependencies]
digest = { workspace = true, features = ["alloc"] }
hex-literal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "k12_benchmarks"
harness = false

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize", "lib-q-sha3/zeroize"]

[lib]
bench = false
name = "lib_q_k12"
path = "src/lib.rs"
crate-type = ["rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(hax)',
    'cfg(eurydice)',
    'cfg(doc_cfg)',
    'cfg(tarpaulin)',
] }
